<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartPedo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="textview1">Distance</string>
	<string name="menuItemSettings">Settings</string>
	<string name="distanceIcon">Distance Covered</string>
	<string name="textview2">Time</string>
	<string name="getLocation">Start</string>
	<string name="AppIcon">App Icon</string>
	<string name="appName">SmartPedo</string>
	<string name="fontFamily">Verdana</string>
	<string name="getStopLocation">Stop</string>
	<string name="stepsCounted">Number of Steps</string>
	<string name="caloriesBurnedIcon">Calories Burned</string>
	<string name="textview3">Calories</string>
	<string name="textview4">Steps</string>
	<string name="history">ShowHistory</string>
</resources>

